[project]
name = "beets-vocadb"
version = "0.0.1"
description = "Plugins for beets to use VocaDB, UtaiteDB and TouhouDB as autotagger sources."
authors = [
    { name = "prTopi", email = "17724308+prTopi@users.noreply.github.com" },
    { name = "amogus07", email = "78656278+amogus07@users.noreply.github.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Players :: MP3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "beets",
    "httpx[http2]",
    "msgspec",
    "typing_extensions; python_version < '3.12'",
]

[tool.basedpyright]
pythonVersion = "3.9"

[tool.setuptools.packages.find]
exclude = ["typings"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py39"
line-length = 80

[tool.ruff.lint]
select = [
    # "ARG", # flake8-unused-arguments
    # "C4", # flake8-comprehensions
    "E", # pycodestyle
    "F", # pyflakes
    # "B", # flake8-bugbear
    "I",  # isort
    "N",  # pep8-naming
    "PT", # flake8-pytest-style
    # "RUF", # ruff
    # "UP", # pyupgrade
    "TCH", # flake8-type-checking
    "W",   # pycodestyle
]

[tool.ruff.lint.per-file-ignores]
"beets/**" = ["PT"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pycodestyle]
max-line-length = 88

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "csv"

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true
