[project]
name = "beets-vocadb"
version = "0.0.1"
description = "Plugins for beets to use VocaDB, UtaiteDB and TouhouDB as autotagger sources."
authors = [
    { name = "prTopi", email = "17724308+prTopi@users.noreply.github.com" },
    { name = "amogus07", email = "78656278+amogus07@users.noreply.github.com" },
]
license = { file = "LICENSE" }
readme = "README.md"

keywords = ["music", "vocadb", "beets", "metadata"]
requires-python = ">=3.9,<4.0"
classifiers = [
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Players :: MP3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "beets (>=2.3.0,<3.0.0)",
    "httpx[http2] (>=0.28.1,<0.29.0)",
    "msgspec (>=0.19.0,<0.20.0)",
    "typing-extensions (>=4.13.2,<4.14.0); python_version < '3.12'",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "beetsplug" }]
include = ["LICENSE", "README.md"]

[tool.poetry.group.test.dependencies]
coverage = "^7.8.0"
pytest = "^8.3.5"
flake8 = "^7.2.0"

[tool.basedpyright]
pythonVersion = "3.9"

[tool.ruff]
target-version = "py39"
line-length = 80

[tool.ruff.lint]
select = [
    # "ARG", # flake8-unused-arguments
    # "C4", # flake8-comprehensions
    "E", # pycodestyle
    "F", # pyflakes
    # "B", # flake8-bugbear
    "I",  # isort
    "N",  # pep8-naming
    "PT", # flake8-pytest-style
    # "RUF", # ruff
    # "UP", # pyupgrade
    #     "TCH", # flake8-type-checking
    "W", # pycodestyle
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pycodestyle]
max-line-length = 88

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "csv"

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true
